--- a/src/views/flex.pug
+++ b/src/views/flex.pug
@@ -3,7 +3,7 @@ section.flex
     .header
       .title.bold Flex
       .subtitle.
-        The <code>flex</code> class added to a layout's child element will flex 
+        The <code>.flex</code> class added to a layout's child element will flex 
         (grow or shrink) to fit the unused are by other elements.
     .example.layout-row.layout-wrap
       .flex-30: .box .flex-30
