--- a/src/views/offsets.pug
+++ b/src/views/offsets.pug
@@ -35,29 +35,29 @@ section.offsets
             td Default flex-offset can be override by other
           tr.odd
             td flex-offset-xs
-            td width < 600px
+            td <pre>width</pre> &lt; 600px
           tr.even
             td flex-offset-gt-xs
-            td width >= 600px
+            td <pre>width</pre> &ge; 600px
           tr.odd
             td flex-offset-sm
-            td 600px <= width < 960px 
+            td 600px &le; <pre>width</pre> &lt; 960px 
           tr.even
             td flex-offset-gt-sm
-            td width >= 960px
+            td <pre>width</pre> &ge; 960px
           tr.odd
             td flex-offset-md
-            td 960px <= width < 1280px
+            td 960px &le; <pre>width</pre> &lt; 1280px
           tr.even
             td flex-offset-gt-md
-            td width >= 1280px
+            td <pre>width</pre> &ge; 1280px
           tr.odd
             td flex-offset-lg
-            td 1280px <= width < 1920px
+            td 1280px &le; <pre>width</pre> &lt; 1920px
           tr.even
             td flex-offset-gt-lg
-            td width >= 1920px
+            td <pre>width</pre> &ge; 1920px
           tr.odd
             td flex-offset-xl
-            td width >= 1920px
+            td <pre>width</pre> &ge; 1920px
     
