--- a/src/views/order.pug
+++ b/src/views/order.pug
@@ -19,31 +19,31 @@ section.order
             td Default flex-order can be override by other
           tr.odd
             td flex-order-xs
-            td width < 600px
+            td <pre>width</pre> &lt; 600px
           tr.even
             td flex-order-gt-xs
-            td width >= 600px
+            td <pre>width</pre> &ge; 600px
           tr.odd
             td flex-order-sm
-            td 600px <= width < 960px 
+            td 600px &le; <pre>width</pre> &lt; 960px 
           tr.even
             td flex-order-gt-sm
-            td width >= 960px
+            td <pre>width</pre> &ge; 960px
           tr.odd
             td flex-order-md
-            td 960px <= width < 1280px
+            td 960px &le; <pre>width</pre> &lt; 1280px
           tr.even
             td flex-order-gt-md
-            td width >= 1280px
+            td <pre>width</pre> &ge; 1280px
           tr.odd
             td flex-order-lg
-            td 1280px <= width < 1920px
+            td 1280px &le; <pre>width</pre> &lt; 1920px
           tr.even
             td flex-order-gt-lg
-            td width >= 1920px
+            td <pre>width</pre> &ge; 1920px
           tr.odd
             td flex-order-xl
-            td width >= 1920px
+            td <pre>width</pre> &ge; 1920px
             
     .example.layout-row
       .flex.flex-order--1: .box .flex-order--1
