--- a/src/index.pug
+++ b/src/index.pug
@@ -25,10 +25,8 @@ html
     include views/wrap
     include views/fill
     
-
     include views/fluid
-    include views/width
-    include views/distribution
+    //- include views/width
     include views/show
     include views/units
     script(src='./dist/js/main.js')
