--- a/src/views/alignment.pug
+++ b/src/views/alignment.pug
@@ -21,31 +21,31 @@ section.alignment
             td Default layout-align can be override by other
           tr.odd
             td layout-align-xs
-            td width < 600px
+            td <pre>width</pre> &lt; 600px
           tr.even
             td layout-align-gt-xs
-            td width >= 600px
+            td <pre>width</pre> &ge; 600px
           tr.odd
             td layout-align-sm
-            td 600px <= width < 960px 
+            td 600px &le; <pre>width</pre> &lt; 960px 
           tr.even
             td layout-align-gt-sm
-            td width >= 960px
+            td <pre>width</pre> &ge; 960px
           tr.odd
             td layout-align-md
-            td 960px <= width < 1280px
+            td 960px &le; <pre>width</pre> &lt; 1280px
           tr.even
             td layout-align-gt-md
-            td width >= 1280px
+            td <pre>width</pre> &ge; 1280px
           tr.odd
             td layout-align-lg
-            td 1280px <= width < 1920px
+            td 1280px &le; <pre>width</pre> &lt; 1920px
           tr.even
             td layout-align-gt-lg
-            td width >= 1920px
+            td <pre>width</pre> &ge; 1920px
           tr.odd
             td layout-align-xl
-            td width >= 1920px
+            td <pre>width</pre> &ge; 1920px
             
     .example.layout-row.layout-wrap
       .flex-40.layout-column.layout-align-center
