--- a/src/sass/flexbox.scss
+++ b/src/sass/flexbox.scss
@@ -1,10 +1,10 @@
-@import 'imports/container';
-@import 'imports/layout';
-@import 'imports/flex';
-@import 'imports/alignment';
-@import 'imports/show';
-@import 'imports/order';
-@import 'imports/offset';
-@import 'imports/padding';
-@import 'imports/margin';
-@import 'imports/typography'; 
+@import 'imports/_container';
+@import 'imports/_layout';
+@import 'imports/_flex';
+@import 'imports/_alignment';
+@import 'imports/_show';
+@import 'imports/_order';
+@import 'imports/_offset';
+@import 'imports/_padding';
+@import 'imports/_margin';
+@import 'imports/_typography';
