--- a/src/views/fluid.pug
+++ b/src/views/fluid.pug
@@ -5,11 +5,11 @@ section.grid_size
       h4.
         Converts the container into a full width container, just replace .container for .container-fluid
     .code.row
-        pre(contenteditable="true").
-          &lt;div class='container-fluid'&gt;
-            &lt;div class='layout-row'&gt;
-              &lt;div class='flex-xs-100 flex-sm-50 flex-md-60 flex-80'&gt;
-                &lt;div class='box'&gt;Container fluid&lt;/div&gt;
-              &lt;/div&gt;
+      pre(contenteditable="true").
+        &lt;div class='container-fluid'&gt;
+          &lt;div class='layout.row'&gt;
+            &lt;div class='flex-xs-100 flex-sm-50 flex-md-60 flex-80'&gt;
+              &lt;div class='box'&gt;Container fluid&lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
+        &lt;/div&gt;
