--- a/src/views/responsive.pug
+++ b/src/views/responsive.pug
@@ -6,53 +6,53 @@ section.responsive
         The system was build to response to different sizes in which includes the flex,
         offsets, horizontal alignment, vertical alignment, show and hide for xs, sm, md, 
         lg and xl sizes.
-    
+
     .table-responsive: table
-        thead
-          tr
-            th
-              .title Layout
-            th
-              .title Breakpoint
-        tbody
-          tr.even
-            td layout
-            td Default layout can be override by other
-          tr.odd
-            td layout-xs
-            td width < 600px
-          tr.even
-            td layout-gt-xs
-            td width >= 600px
-          tr.odd
-            td layout-sm
-            td 600px <= width < 960px 
-          tr.even
-            td layout-gt-sm
-            td width >= 960px
-          tr.odd
-            td layout-md
-            td 960px <= width < 1280px
-          tr.even
-            td layout-gt-md
-            td width >= 1280px
-          tr.odd
-            td layout-lg
-            td 1280px <= width < 1920px
-          tr.even
-            td layout-gt-lg
-            td width >= 1920px
-          tr.odd
-            td layout-xl
-            td width >= 1920px
+      thead
+        tr
+          th
+            .title Layout
+          th
+            .title Breakpoint
+      tbody
+        tr.even
+          td layout
+          td Default layout can be override by other
+        tr.odd
+          td layout-xs
+          td width < 600px
+        tr.even
+          td layout-gt-xs
+          td width >= 600px
+        tr.odd
+          td layout-sm
+          td 600px <= width < 960px 
+        tr.even
+          td layout-gt-sm
+          td width >= 960px
+        tr.odd
+          td layout-md
+          td 960px <= width < 1280px
+        tr.even
+          td layout-gt-md
+          td width >= 1280px
+        tr.odd
+          td layout-lg
+          td 1280px <= width < 1920px
+        tr.even
+          td layout-gt-lg
+          td width >= 1920px
+        tr.odd
+          td layout-xl
+          td width >= 1920px
 
     .example.layout-column
-      .layout-row.layout-wrap
+      .layout.row.wrap
         .flex-xs-25.flex-sm-70.flex-gt-sm-25: .box
         .flex-xs-75.flex-sm-30.flex-gt-sm-50: .box
         .flex-xs-100.flex-sm-100.flex-gt-sm-25: .box
 
-      .layout-row.layout-wrap
+      .layout.row.wrap
         .flex-33.flex-gt-md-20: .box
         .flex-33.flex-gt-md-20: .box
         .flex-33.flex-gt-md-10: .box
@@ -60,14 +60,14 @@ section.responsive
         .flex-33.flex-gt-md-20: .box
         .flex-33.flex-gt-md-20: .box
 
-      .layout-row.layout-wrap
+      .layout.row.wrap
         .flex-xs-25.flex-sm-75.flex-gt-sm-50: .box
         .flex-xs-75.flex-sm-25.flex-gt-sm-50: .box
 
     .code.row
       pre(contenteditable="true").
         &lt;div class="example layout-column"&gt;
-          &lt;div class="layout-row layout-wrap"&gt;
+          &lt;div class="layout.row wrap"&gt;
             &lt;div class="flex-xs-25 flex-sm-70 flex-gt-sm-25"&gt;
               &lt;div class="box"&gt;&lt;/div&gt;
             &lt;/div&gt;
@@ -78,7 +78,7 @@ section.responsive
               &lt;div class="box"&gt;&lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="layout-row layout-wrap"&gt;
+          &lt;div class="layout.row wrap"&gt;
             &lt;div class="flex-33 flex-gt-md-20"&gt;
               &lt;div class="box"&gt;&lt;/div&gt;
             &lt;/div&gt;
@@ -98,7 +98,7 @@ section.responsive
               &lt;div class="box"&gt;&lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="layout-row layout-wrap"&gt;
+          &lt;div class="layout.row wrap"&gt;
             &lt;div class="flex-xs-25 flex-sm-75 flex-gt-sm-50"&gt;
               &lt;div class="box"&gt;&lt;/div&gt;
             &lt;/div&gt;
