--- a/src/views/wrap.pug
+++ b/src/views/wrap.pug
@@ -3,10 +3,10 @@ section#wrap
     .header
       .title.bold Wrapping
       .subtitle.
-        The <code>.layout-wrap</code> allows you to wrap all children
+        The <code>.wrap</code> allows you to wrap all children
         within container if the elements use more than 100%;
 
-    .example.layout-row.layout-wrap
+    .example.layout.row.wrap
       .flex-30: .box .flex-30
       .flex-45: .box .flex-45
       .flex-25: .box .flex-25
@@ -15,33 +15,32 @@ section#wrap
       .flex-80: .box .flex-80
       .flex-10: .box .flex-10
       .flex-45: .box .flex-45
-    
+
     .code.row
-        pre(contenteditable="true").
-          &lt;div class="example layout-row layout-wrap"&gt;
-            &lt;div class="flex-30"&gt;
-              &lt;div class="box"&gt;.flex-30&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class="flex-45"&gt;
-              &lt;div class="box"&gt;.flex-45&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class="flex-25"&gt;
-              &lt;div class="box"&gt;.flex-25&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class="flex-25"&gt;
-              &lt;div class="box"&gt;.flex-25&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class="flex-66"&gt;
-              &lt;div class="box"&gt;.flex-66&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class="flex-80"&gt;
-              &lt;div class="box"&gt;.flex-80&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class="flex-10"&gt;
-              &lt;div class="box"&gt;.flex-10&lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class="flex-45"&gt;
-              &lt;div class="box"&gt;.flex-45&lt;/div&gt;
-            &lt;/div&gt;
+      pre(contenteditable="true").
+        &lt;div class="example layout.row wrap"&gt;
+          &lt;div class="flex-30"&gt;
+            &lt;div class="box"&gt;.flex-30&lt;/div&gt;
           &lt;/div&gt;
-      
+          &lt;div class="flex-45"&gt;
+            &lt;div class="box"&gt;.flex-45&lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class="flex-25"&gt;
+            &lt;div class="box"&gt;.flex-25&lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class="flex-25"&gt;
+            &lt;div class="box"&gt;.flex-25&lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class="flex-66"&gt;
+            &lt;div class="box"&gt;.flex-66&lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class="flex-80"&gt;
+            &lt;div class="box"&gt;.flex-80&lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class="flex-10"&gt;
+            &lt;div class="box"&gt;.flex-10&lt;/div&gt;
+          &lt;/div&gt;
+          &lt;div class="flex-45"&gt;
+            &lt;div class="box"&gt;.flex-45&lt;/div&gt;
+          &lt;/div&gt;
+        &lt;/div&gt;
