--- a/src/sass/imports/_padding.scss
+++ b/src/sass/imports/_padding.scss
@@ -1,41 +1,20 @@
-.layout-padding-sm>* {
-  padding: 4px;
+@import '_variables';
+
+// Direction padding
+@each $ndirection, $value in $direction {
+   @each $nspacing, $vspacing in $spacing {
+      .p#{$ndirection}-#{$nspacing} {
+         padding#{$value}: $vspacing;
+      }
+   }
 }
 
-.layout-padding {
-  >.flex-sm {
-    padding: 4px;
-  }
-  padding: 8px;
-}
-
-.layout-padding-gt-sm,
-.layout-padding-md {
-  padding: 8px;
-  >* {
-    padding: 8px;
-  }
-}
-
-.layout-padding> {
-  *,
-  .flex,
-  .flex-gt-sm,
-  .flex-md {
-    padding: 8px;
-  }
-}
-
-.layout-padding-gt-lg>*,
-.layout-padding-gt-md>*,
-.layout-padding-lg>* {
-  padding: 16px;
-}
-
-.layout-padding> {
-  .flex-gt-lg,
-  .flex-gt-md,
-  .flex-lg {
-    padding: 16px;
-  }
+// Axis padding
+@each $nspacing, $vspacing in $spacing {
+   .py-#{$nspacing} {
+      padding: $vspacing 0;
+   }
+   .px-#{$nspacing} {
+      padding: 0 $vspacing;
+   }
 }
