--- a/src/sass/imports/_show.scss
+++ b/src/sass/imports/_show.scss
@@ -1,32 +1,18 @@
-@import 'queries';
-
-// Show and hide classes
-$sizes: ( 
-  xs: $xs-screen, 
-  gt-xs: $xs-screen-and-up, 
-  sm: $sm-screen, 
-  gt-sm: $sm-screen-and-up, 
-  md: $md-screen, 
-  gt-md: $md-screen-and-up, 
-  lg: $lg-screen, 
-  gt-lg: $lg-screen-and-up, 
-  xl: $xl-screen
-);
-
+@import '_sizes';
 
 @each $name, $query in $sizes {
-  // Hidden by default, if media is equal then will show
-  .show-#{$name} {
-    display: none;
-    @media #{$query}{
-      display: flex;
-    }
-  }
-  // Showed by default, if media is equal then will hide
-  .hide-#{$name}{
-    display: flex;
-    @media #{$query}{
+   // Hidden by default, if media is equal then will show
+   .show-#{$name} {
       display: none;
-    }
-  }
+      @media #{$query} {
+         display: flex;
+      }
+   }
+   // Showed by default, if media is equal then will hide
+   .hide-#{$name} {
+      display: flex;
+      @media #{$query} {
+         display: none;
+      }
+   }
 }
