--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -5,9 +5,25 @@ $sm-break: 48rem;
 $md-break: 64rem;
 $lg-break: 75rem;
 
-@if $pixels_units{
-  $xs-break: 600px;
-  $sm-break: 960px;
-  $md-break: 1280px;
-  $lg-break: 1920px;
+@if $pixels_units {
+   $xs-break: 600px;
+   $sm-break: 960px;
+   $md-break: 1280px;
+   $lg-break: 1920px;
 }
+
+$spacing: (
+   1: 4px,
+   2: 8px,
+   3: 16px,
+   4: 24px,
+   5: 48px,
+);
+
+$direction: (
+   a: '',
+   t: '-top',
+   b: '-bottom',
+   r: '-right',
+   l: '-left',
+);
