--- a/src/views/alignment.pug
+++ b/src/views/alignment.pug
@@ -9,47 +9,47 @@ section.alignment
         If one word is passed it'kk works but only for horizontal alignment.
 
     .table-responsive: table
-        thead
-          tr
-            th
-              .title Order
-            th
-              .title Breakpoint
-        tbody
-          tr.even
-            td layout-align
-            td Default layout-align can be override by other
-          tr.odd
-            td layout-align-xs
-            td <pre>width</pre> &lt; 600px
-          tr.even
-            td layout-align-gt-xs
-            td <pre>width</pre> &ge; 600px
-          tr.odd
-            td layout-align-sm
-            td 600px &le; <pre>width</pre> &lt; 960px 
-          tr.even
-            td layout-align-gt-sm
-            td <pre>width</pre> &ge; 960px
-          tr.odd
-            td layout-align-md
-            td 960px &le; <pre>width</pre> &lt; 1280px
-          tr.even
-            td layout-align-gt-md
-            td <pre>width</pre> &ge; 1280px
-          tr.odd
-            td layout-align-lg
-            td 1280px &le; <pre>width</pre> &lt; 1920px
-          tr.even
-            td layout-align-gt-lg
-            td <pre>width</pre> &ge; 1920px
-          tr.odd
-            td layout-align-xl
-            td <pre>width</pre> &ge; 1920px
-            
-    .example.layout-row.layout-wrap
+      thead
+        tr
+          th
+            .title Order
+          th
+            .title Breakpoint
+      tbody
+        tr.even
+          td layout-align
+          td Default layout-align can be override by other
+        tr.odd
+          td layout-align-xs
+          td <pre>width</pre> &lt; 600px
+        tr.even
+          td layout-align-gt-xs
+          td <pre>width</pre> &ge; 600px
+        tr.odd
+          td layout-align-sm
+          td 600px &le; <pre>width</pre> &lt; 960px 
+        tr.even
+          td layout-align-gt-sm
+          td <pre>width</pre> &ge; 960px
+        tr.odd
+          td layout-align-md
+          td 960px &le; <pre>width</pre> &lt; 1280px
+        tr.even
+          td layout-align-gt-md
+          td <pre>width</pre> &ge; 1280px
+        tr.odd
+          td layout-align-lg
+          td 1280px &le; <pre>width</pre> &lt; 1920px
+        tr.even
+          td layout-align-gt-lg
+          td <pre>width</pre> &ge; 1920px
+        tr.odd
+          td layout-align-xl
+          td <pre>width</pre> &ge; 1920px
+
+    .example.layout.row.wrap
       .flex-40.layout-column.layout-align-center
-        .flex.layout-row.layout-align-space-around-center
+        .flex.layout.row.layout-align-space-around-center
           .box
           .box
           .box
@@ -58,17 +58,17 @@ section.alignment
       .flex-20.layout-column.layout-align-space-around-stretch
         .flex-30.box
         .flex-30.box
-      .flex-40.layout-row.layout-wrap.layout-align-end
+      .flex-40.layout.row.wrap.layout-align-end
         .flex-30.box
         .flex-30.box
         .flex-70.box
         .flex-30.box
-    
+
     .code.row
       pre(contenteditable="true").
-        &lt;div class="layout-row layout-wrap"&gt;
+        &lt;div class="layout.row wrap"&gt;
           &lt;div class="flex-40 layout-column layout-align-center"&gt;
-            &lt;div class="flex layout-row layout-align-space-around-center"&gt;
+            &lt;div class="flex layout.row layout-align-space-around-center"&gt;
               &lt;div class="box"&gt;&lt;/div&gt;
               &lt;div class="box"&gt;&lt;/div&gt;
               &lt;div class="box"&gt;&lt;/div&gt;
@@ -80,7 +80,7 @@ section.alignment
             &lt;div class="flex-30 box"&gt;&lt;/div&gt;
             &lt;div class="flex-30 box"&gt;&lt;/div&gt;
           &lt;/div&gt;
-          &lt;div class="flex-40 layout-row layout-wrap layout-align-end"&gt;
+          &lt;div class="flex-40 layout.row wrap layout-align-end"&gt;
             &lt;div class="flex-30 box"&gt;&lt;/div&gt;
             &lt;div class="flex-30 box"&gt;&lt;/div&gt;
             &lt;div class="flex-70 box"&gt;&lt;/div&gt;
