--- a/src/views/header.pug
+++ b/src/views/header.pug
@@ -1,3 +1,3 @@
-header.layout-column.layout-align-center-center
-  .title.bold Layout Flexbox
-  .subtitle Super powerful flex layout
+header.layout.column.justify-content-center.align-items-center
+   .title.bold Layout Flexbox
+   .subtitle Super powerful flex layout
