--- a/src/views/margin.pug
+++ b/src/views/margin.pug
@@ -5,7 +5,7 @@ section#margin
       .subtitle.
         The <code>.layout-margin</code> class add margin to the layout 
         as well as all the flex children.
-    .example.layout-row.layout-wrap.layout-margin
+    .example.layout.row.wrap.layout-margin
       .flex-30: .box .flex-30
       .flex-45: .box .flex-45
       .flex-25: .box .flex-25
