--- a/src/views/padding.pug
+++ b/src/views/padding.pug
@@ -3,9 +3,9 @@ section#padding
     .header
       .title.bold Padding
       .subtitle.
-        The <code>.layout-padding</code> class add padding to the layout 
+        The <code>.p2</code> class add padding to the layout 
         as well as all the flex children.
-    .example.layout-row.layout-wrap.layout-padding
+    .example.layout.row.wrap.p2
       .flex-30: .box .flex-30
       .flex-45: .box .flex-45
       .flex-25: .box .flex-25
